v0.1/dev/ros2_uav_px4/_sources/generated/program_listing_file_include_ros2_uav_px4_mode_interface_mode_interface.hpp.rst.txt

.. _program_listing_file_include_ros2_uav_px4_mode_interface_mode_interface.hpp:

Program Listing for File mode_interface.hpp
===========================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_ros2_uav_px4_mode_interface_mode_interface.hpp>` (``include/ros2_uav_px4/mode_interface/mode_interface.hpp``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   // Copyright 2024 Damien SIX (damien@robotsix.net)
   //
   // Licensed under the Apache License, Version 2.0 (the "License");
   // you may not use this file except in compliance with the License.
   // You may obtain a copy of the License at
   //
   //     http://www.apache.org/licenses/LICENSE-2.0
   //
   // Unless required by applicable law or agreed to in writing, software
   // distributed under the License is distributed on an "AS IS" BASIS,
   // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   // See the License for the specific language governing permissions and
   // limitations under the License.
   
   #pragma once
   
   #include <uav_cpp/parameters/param_container.hpp>
   #include <px4_ros2/components/mode.hpp>
   
   namespace ros2_uav::modes
   {
   using uav_cpp::parameters::ParamContainer;
   using px4_ros2::ModeBase;
   
   class ModeInterface : public ModeBase, public ParamContainer
   {
   public:
     ModeInterface(const ModeBase::Settings & mode_settings, rclcpp::Node & node)
     : ModeBase(node, mode_settings),
       ParamContainer(),
       node_(node)
     {
     }
   
   protected:
     rclcpp::Node & node_;  
   };
   
   }  // namespace ros2_uav::modes
